Short slider animation, fix double margin on smaller screens

--- a/client/marketing/overview/knowledge-base/animate/style.scss
+++ b/client/marketing/overview/knowledge-base/animate/style.scss
@@ -21,7 +21,7 @@ The CSSTransition element creates a containing div without a class
 		top: 0;
 		left: 0;
 		width: 100%;
-		transition: transform 400ms ease-in;
+		transition: transform 300ms ease-in;
 		position: relative;
 	}
 
